[gd_scene load_steps=4 format=3 uid="uid://61a6oltllrmg"]

[ext_resource type="Script" uid="uid://dvxt2hoe0rl1e" path="res://scenes/Main.gd" id="1_0bbpv"]
[ext_resource type="Script" uid="uid://72c6euivotop" path="res://scripts/GridOverlay.gd" id="2_rarhs"]
[ext_resource type="Script" uid="uid://bifeet34dh2p3" path="res://scripts/UI.gd" id="3_vcsgt"]

[node name="Main" type="Node2D"]
script = ExtResource("1_0bbpv")

[node name="Camera2D" type="Camera2D" parent="."]
position_smoothing_enabled = true
position_smoothing_speed = 8.0

[node name="GridOverlay" type="Node2D" parent="."]
script = ExtResource("2_rarhs")

[node name="Modules" type="Node2D" parent="."]

[node name="Residents" type="Node2D" parent="."]

[node name="HUD" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="HUD"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("3_vcsgt")

[node name="TopBar" type="PanelContainer" parent="HUD/UI"]
custom_minimum_size = Vector2(0, 44)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HUD/UI/TopBar"]
layout_mode = 2

[node name="CreditsLabel" type="Label" parent="HUD/UI/TopBar/HBoxContainer"]
layout_mode = 2
text = "â‚¡ 1000"

[node name="BtnSave" type="Button" parent="HUD/UI/TopBar/HBoxContainer"]
layout_mode = 2
text = "Save"

[node name="BtnLoad" type="Button" parent="HUD/UI/TopBar/HBoxContainer"]
layout_mode = 2
text = "Load"

[node name="BuildBar" type="PanelContainer" parent="HUD/UI"]
custom_minimum_size = Vector2(0, 44)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -31.0
grow_horizontal = 2
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="HUD/UI/BuildBar"]
layout_mode = 2

[node name="BtnHall" type="Button" parent="HUD/UI/BuildBar/HBoxContainer"]
layout_mode = 2
text = "Hall"

[node name="BtnHab" type="Button" parent="HUD/UI/BuildBar/HBoxContainer"]
layout_mode = 2
text = "Hab"

[node name="BtnShop" type="Button" parent="HUD/UI/BuildBar/HBoxContainer"]
layout_mode = 2
text = "Shop"

[node name="BtnDock" type="Button" parent="HUD/UI/BuildBar/HBoxContainer"]
layout_mode = 2
text = "Dock"

[node name="BtnErase" type="Button" parent="HUD/UI/BuildBar/HBoxContainer"]
layout_mode = 2
text = "Delete"

[node name="PlaceHint" type="Label" parent="HUD/UI/BuildBar/HBoxContainer"]
layout_mode = 2
text = "LMB: Place | RMB: Pan | Wheel: Zoom"

[node name="ConfirmErase" type="ConfirmationDialog" parent="HUD/UI"]
dialog_text = "Delete this module? (Refund 50%)"

[node name="InspectPanel" type="Panel" parent="HUD/UI"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/UI/InspectPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ModuleLabel" type="Label" parent="HUD/UI/InspectPanel/VBoxContainer"]
layout_mode = 2

[node name="StatsLabel" type="RichTextLabel" parent="HUD/UI/InspectPanel/VBoxContainer"]
layout_mode = 2

[node name="BtnUpgrade" type="Button" parent="HUD/UI/InspectPanel/VBoxContainer"]
layout_mode = 2
text = "Upgrade"
